--- a/style.css
+++ b/style.css
@@ -132,3 +132,25 @@ body{
     font-weight: 700;
     font-size: 15px;
 }
+
+
+/* ---Shop page--- */
+
+#page-header{
+    background-image: url("./img/banner/b1.jpg");
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+
+}
+
+#page-header h2,
+#page-haeder p{
+    color: #fff;
+
+}
