--- a/style.css
+++ b/style.css
@@ -765,6 +765,9 @@ footer .copyright {
 }
 
 /* Cart Page */
+#cart{
+    overflow-x: auto;
+}
 
 #cart table {
     width: 100%;
@@ -836,7 +839,8 @@ footer .copyright {
     margin-bottom: 30px;
 }
 
-#coupon h3 {
+#coupon h3,
+#subtotal h3 {
     padding-bottom: 15px;
 }
 
@@ -848,7 +852,8 @@ footer .copyright {
     border: 1px solid #e2e9e1;
 }
 
-#coupon button {
+#coupon button,
+#subtotal button {
     background-color: #088178;
     color: #fff;
     padding: 12px 20px;
@@ -861,7 +866,19 @@ footer .copyright {
     padding: 30px;
 }
 
-#subtotal {}
+#subtotal table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+#subtotal table td{
+    width: 50%;
+    border: 1px solid #e2e9e1;
+    padding: 10px;
+    font-size: 13px;
+}
+
 
 /* Start Media Query */
 
@@ -976,6 +993,16 @@ footer .copyright {
 
         width: 70%;
     }
+
+    /* Contact Page */
+    #form-details{
+        padding: 40px;
+    }
+
+    #form-details form
+    {
+        width: 50%;
+    }
 }
 
 @media (max-width: 477px) {
@@ -1054,5 +1081,52 @@ footer .copyright {
     footer .copyright {
 
         text-align: start;
+    }
+
+    /* Single Product */
+    #prodetails{
+        display: flex;
+        flex-direction: column;
+    }
+    #prodetails .single-pro-image{
+        width: 100%;
+        margin-right: 0px; 
+    }
+    #prodetails .single-pro-details{
+        width: 50%;
+        
+    }
+
+    /* Contact page */
+    #contact-details{
+        flex-direction: column;
+    }
+    #contact-details .details{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    #contact-details .details{
+        width: 100%;
+    }
+    #form-details{
+        margin: 10px;
+        padding: 30px 10px;
+        flex-wrap: wrap;
+    }
+    #form-details form{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    /* Cart Page */
+    #cart-add{
+        flex-direction: column;
+    }
+    #coupon{
+        width: 100%;
+    }
+    #subtotal{
+        width: 100%;
+        padding: 20px;
     }
 }
